<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_person">
    <fragment
            android:id="@+id/navigation_person"
            android:name="com.example.dogsapp.ui.person.PersonFragment"
            android:label="@string/title_notifications"
            tools:layout="@layout/fragment_person"/>

    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="com.example.dogsapp.ui.dashboard.DashboardFragment"
            android:label="@string/title_dashboard"
            tools:layout="@layout/fragment_dashboard"/>

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.dogsapp.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>
</navigation>