<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="#FFFFFF">


    <CheckBox
            android:text="@string/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkBox"
            app:layout_constraintTop_toBottomOf="@+id/regPasswordRepeat" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp" android:layout_marginTop="48dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/regPasswordRepeat"
            app:layout_constraintStart_toStartOf="@+id/checkBox" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.663"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/regPassword"
            app:layout_constraintStart_toStartOf="@+id/regPasswordRepeat" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:ems="10"
            android:id="@+id/nameReg"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="@+id/regEmail" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.111"
    />
    <EditText
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/regEmail"
            app:layout_constraintStart_toStartOf="@+id/regPassword" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.347"/>
    <TextView
            android:text="@string/reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.463"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.061"/>
    <TextView
            android:text="@string/log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/backLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintVertical_bias="0.808"
            app:layout_constraintStart_toEndOf="@+id/checkBox" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>